# ploy

./: .clangd.sample  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  bytecode.cpp  bytecode.hpp  compiler.cpp  compiler.hpp  main.cpp  opcodes.hpp  overload.hpp  scheme_value.hpp  template_appender.hpp  tokenizer.cpp  tokenizer.hpp  virtual_machine.cpp  virtual_machine.hpp
src/cli/: arg_parser.hpp
src/lib/: CMakeLists.txt  compiler.cpp  overload.hpp  tokenizer.cpp  virtual_machine.cpp
src/lib/include/: bytecode.hpp  scheme_value.hpp  tokenizer.hpp  virtual_machine.hpp
src/ploycli/: CMakeLists.txt  main.cpp
src/ploylib/: bytecode.cpp  compiler.cpp  overload.hpp  tokenizer.cpp  virtual_machine.cpp
src/ploylib/include/: bytecode.hpp  compiler.hpp  scheme_value.hpp  template_appender.hpp  virtual_machine.hpp
src/tests/: CMakeLists.txt  main.cpp  run_tests.ps1  run_tests.sh
src/tests/test_cases/: arithmetic.scm  coarity.scm  continuations.scm  if.scm  lambdas.scm  pairs.scm  pairs_and_lists.scm  variables.scm
